platform/automation/kubernetes/base/n8n/internal-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n-http-route
  namespace: automation
  annotations:
    external-dns.alpha.kubernetes.io/hostname: n8n.homelab.internal,n8n.teaglebuilt.tech
spec:
  parentRefs:
    - name: homelab-internal-gateway
      namespace: kube-system
  hostnames:
    - n8n.homelab.internal
    - n8n.teaglebuilt.tech
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
        - path:
            type: PathPrefix
            value: /mcp-server/http
      backendRefs:
        - name: n8n-service
          port: 443
